@startuml
!pragma layout smetana
!include _estilo.iuml
hide empty description
title CU-06 Consultar Organizacion Vinculada
state "Cargando" as Carga
Carga : entry / findAll() : List<LinkedOrganization>
state "Lista mostrada" as Lista
Lista : entry / tableView.getItems().setAll(organizations)
state "Sin registros" as Vacio
Vacio : entry / showAlert("Sin registros", INFORMATION)
state "Error" as Error
Error : entry / showAlert("Error de servicio", ERROR)
[*] --> Carga
Carga --> Lista : [hay registros]
Carga --> Vacio : [lista vacia]
Carga --> Error : [ServiceException]
Lista --> [*]
Vacio --> [*]
Error --> [*]
@enduml
